  - Adjust the caret color to some light color.


Data copied from tables are now added to paste history.
  Note: Paste history can be accessed through ctrl+shift+v or ctrl+shift+insert.

Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checked blue) drivers are now displayed on top of the drop-down.
  Thanks to Peter G. Horvath for the patch.


Bug fixes:

#1394 Line breaks are lost on copy/paste when copy as Rich Text was activated, see menu File --> New Session Properties --> tab Syntax.
   With this came another upgrade of RSyntax version 3.0.1. The bug was actually in RSyntax, see https://github.com/bobbylight/RText/issues/39.

Plain zip Windows start script squirrel-sql.bat: javaw.exe could not be found in certain cases.
  In the developers mailing list Sigiswald Madou pointed to differences between the plain zip and the installer scripts that caused the problem.

#1343 SQuirreL refuses to start on macOS  --> Johnny Hujol's fix to the  macOS launch script's.
     Thanks to Johnny Hujol for the fix.

Difference chart plotted differences between second next neighbours instead of next neighbours. (See SQL result --> tab Overview --> button Charts --> tab Differences)

Plain zip releases were missing the doc/ folder.

Merge-Request #44: Workaround for DB2/AIX64 driver Metadata: COLUMN_SIZE is only half of CHAR_OCTET_LENGTH in double-bytes datatype GRAPHIC/VARGRAPHIC columns
  Thanks to Stefan Mueller for the merge request.

Merge-Request #44: Bug fix for DB2 when reading database client properties,
  because java.sql.DataBaseMetaData.getClientInfoProperties().getMetadata() returns null.
  Thanks to Stefan Mueller for the merge request.
  Furthermore reading DataBaseMetaData.getClientInfoProperties() was made more fail save.

#1393 Modifying records in a database via the GUI not working correctly with NULL

In the context of bug #1389: When reading data type OTHER ResultSet.wasNull() may be called when no data was read before.