@@ -79,6 +79,8 @@ Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checke
 
 Bug fixes:
 
+SQL result: Count of selected rows and columns were updated when row selection changed only. Now it's updated on column selection change, too.
+
 #1394 Line breaks are lost on copy/paste when copy as Rich Text was activated, see menu File --> New Session Properties --> tab Syntax.
    With this came another upgrade of RSyntax version 3.0.1. The bug was actually in RSyntax, see https://github.com/bobbylight/RText/issues/39.
 
